Updated styles for registration page and fixed text margin clipping with edge of card

--- a/devcamp_portfolio/app/assets/stylesheets/application.scss
+++ b/devcamp_portfolio/app/assets/stylesheets/application.scss
@@ -162,14 +162,19 @@ body {
 }
 
 /*
- *
+ * Custom Styles
  */
- 
- .card-block {
-   color: black;
-   text-align: left;
- }
- 
- .auth-links a {
-   color: black;
- }
+
+.card-block {
+  padding: 20px;
+  color: black;
+  text-align: left;
+}
+
+.auth-links a {
+  color: black;
+}
+
+.register-text {
+  text-align: right;
+}
